--- a/TestTab2/app/src/main/res/menu/menu_main.xml
+++ b/TestTab2/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/filter"
         android:orderInCategory="1"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="filter"
+        app:showAsAction="never"/>
+
+
 </menu>
