--- a/TestTab2/app/src/main/res/menu/menu_main.xml
+++ b/TestTab2/app/src/main/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
         android:id="@+id/filter"
         android:orderInCategory="1"
         android:title="filter"
-        app:showAsAction="never"/>
-
+        android:icon="@drawable/ic_filter_list_white_24dp"
+        app:showAsAction="always"/>
 
 </menu>
