#1560.5 Improved code and filterMenu design & functionality. Also fixed small issues

--- a/TestTab2/app/src/main/res/layout/explore_view.xml
+++ b/TestTab2/app/src/main/res/layout/explore_view.xml
@@ -18,10 +18,19 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_gravity="center"
+                android:id="@+id/toolbar_title" />
+
+        </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
@@ -29,7 +38,7 @@
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
             app:tabSelectedTextColor="#000000"
-            app:tabTextColor="@color/button_material_dark"/>
+            app:tabTextColor="@color/button_material_dark" />
 
     </android.support.design.widget.AppBarLayout>
 
