--- a/TestTab2/app/src/main/res/layout/fragment_list.xml
+++ b/TestTab2/app/src/main/res/layout/fragment_list.xml
@@ -9,10 +9,11 @@
     tools:context=".MainActivity$PlaceholderFragment">
 
     <ListView
-        android:id="@+id/list"
+        android:id="@+id/listBuyers"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:focusable="false"
-        android:focusableInTouchMode="false" />
+        android:focusableInTouchMode="false"
+        android:layout_alignParentEnd="false" />
 
 </RelativeLayout>
