--- a/TestTab2/app/src/main/res/layout/main_activity.xml
+++ b/TestTab2/app/src/main/res/layout/main_activity.xml
@@ -8,7 +8,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/aux_main"
+        layout="@layout/explore_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -24,7 +24,7 @@
             android:id="@+id/fragmentFilter"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout="@layout/fragment_filter" />
+            tools:layout="@layout/fragment_filter_menu" />
 
     </android.support.design.widget.NavigationView>
 
