--- a/TestTab2/app/src/main/res/layout/fragment_filter_menu.xml
+++ b/TestTab2/app/src/main/res/layout/fragment_filter_menu.xml
@@ -2,14 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.FilterFragment">
+    tools:context=".ui.fragments.FilterFragment">
 
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Fragments.FilterFragment"
+        tools:context=".ui.fragments.FilterFragment"
         android:id="@+id/scrollView"
         android:background="#D8D8D8">
 
@@ -38,7 +38,8 @@
                 android:text="Reset"
                 android:id="@+id/btnReset"
                 android:layout_alignParentStart="true"
-                android:textColor="@android:color/holo_red_dark" />
+                android:textColor="@android:color/holo_red_dark"
+                android:layout_alignParentLeft="true" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -48,7 +49,9 @@
                 android:id="@+id/textView"
                 android:gravity="center"
                 android:layout_toEndOf="@+id/btnReset"
-                android:layout_toStartOf="@+id/btnDone" />
+                android:layout_toStartOf="@+id/btnDone"
+                android:layout_toRightOf="@+id/btnReset"
+                android:layout_toLeftOf="@+id/btnDone" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -57,7 +60,8 @@
                 android:text="Done"
                 android:id="@+id/btnDone"
                 android:layout_alignParentEnd="true"
-                android:textColor="@android:color/holo_red_dark" />
+                android:textColor="@android:color/holo_red_dark"
+                android:layout_alignParentRight="true" />
 
         </RelativeLayout>
 
@@ -167,7 +171,9 @@
                     android:layout_alignParentStart="true"
                     android:layout_marginRight="10dp"
                     android:layout_alignParentEnd="false"
-                    android:text="1km" />
+                    android:text="1km"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentRight="false" />
 
                 <SeekBar
                     android:layout_width="match_parent"
@@ -178,7 +184,11 @@
                     android:layout_alignParentStart="false"
                     android:layout_toEndOf="@id/tvMinKm"
                     android:layout_toStartOf="@+id/tvMaxKm"
-                    android:layout_centerInParent="true" />
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentRight="false"
+                    android:layout_alignParentLeft="false"
+                    android:layout_toRightOf="@id/tvMinKm"
+                    android:layout_toLeftOf="@+id/tvMaxKm" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -187,7 +197,8 @@
                     android:text="km"
                     android:id="@+id/tvMaxKm"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginLeft="10dp" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_alignParentRight="true" />
 
             </RelativeLayout>
         </LinearLayout>
