--- a/TestTab2/app/src/main/res/layout/fragment_list.xml
+++ b/TestTab2/app/src/main/res/layout/fragment_list.xml
@@ -1,19 +1,22 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity$PlaceholderFragment">
+    android:background="#D8D8D8"
+    tools:context=".ui.activity.MainActivity$PlaceholderFragment"
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/textView2" />
 
     <ListView
         android:id="@+id/listBuyers"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:layout_alignParentEnd="false" />
+        tools:listitem="@layout/listview_row_buyers"/>
 
-</RelativeLayout>
+</LinearLayout>
